# vellum

./: .gitignore  .gwm.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  ROADMAP.md  changelog.config.json
.githooks/: pre-commit
.github/: LABELS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/scripts/: check-rc-changelog-dupes.sh  render-tap-formula.sh
.github/workflows/: ci.yml  pre-release.yml  release.yml
packaging/homebrew/: vellum.rb.template
src/: cli.rs  config.rs  dsn.rs  error.rs  keyring_store.rs  lib.rs  main.rs  secrets.rs
src/driver/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/model/: backend.rs  catalog.rs  mod.rs  result.rs  value.rs
src/tui/: app.rs  mod.rs  runtime.rs  theme.rs  view.rs
src/tui/state/: editor.rs  mod.rs  paginate.rs  sidebar.rs  sort.rs  table.rs
tests/: catalog_tests.rs  cli_binary.rs  cli_tests.rs  config_tests.rs  connect_named_tests.rs  driver_tests.rs  dsn_tests.rs  editor_tests.rs  error_tests.rs  keyring_store_tests.rs  model_tests.rs  paginate_tests.rs  secrets_tests.rs  sort_tests.rs  tui_app_tests.rs  tui_runtime_tests.rs  tui_theme_tests.rs  tui_view_tests.rs
tests/common/: mod.rs
