[package]
name = "vellum"
version = "0.1.0"
edition = "2021"
# MSRV is the floor required by every use in the crate — and by the dep tree.
# ratatui 0.30 (with ratatui-core / -widgets / -crossterm, darling,
# instability, time) declares rust-version 1.88, so the TUI stack sets the
# floor here. CI's clippy MSRV lint (`clippy::incompatible_msrv`) enforces it
# against `@stable`.
rust-version = "1.88"
description = "TUI SQL client — browse, query, edit databases with a GitHub-like diff, in the terminal"
authors = ["Kylian Bardini"]
license = "MIT"
repository = "https://github.com/kbrdn1/vellum"
readme = "README.md"
keywords = ["sql", "database", "tui", "cli", "ratatui"]
categories = ["command-line-utilities", "database"]

# cargo-binstall: pull the prebuilt binary from the GitHub Release instead
# of compiling from source. Mirrors the release workflows' artefact naming —
# `vellum-v{version}-{target}.tar.gz` (`.zip` on windows) — and the
# in-archive layout `vellum-v{version}-{target}/{vellum|vellum.exe}`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/vellum-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "vellum-v{ version }-{ target }/{ bin }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/vellum-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[lib]
name = "vellum"
path = "src/lib.rs"

[[bin]]
name = "vellum"
path = "src/main.rs"

# The full Vellum stack — tokio runtime, ratatui/crossterm TUI, sqlx
# drivers (pg/mysql/sqlite by default; duckdb/mssql/clickhouse/ssh behind
# optional features), sqlparser, tui-textarea, keyring — is introduced
# per-phase, NOT prebuilt at scaffold time. See `.roadmap/ARCHITECTURE.md`
# (§stack, §features Cargo) for the frozen plan and the Phase 0 spike that
# wires the first `Driver` + SQLite.

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
anyhow = "1"
thiserror = "2"
# Config + frozen `.vellum.toml` contract: serde derives the typed model,
# `toml` parses the file. No I/O here — just string → struct + validation.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Connection secrets: never in the TOML. `secrecy` wraps in-memory passwords so
# they zeroize on drop and never land in a `Debug` log. The `keyring` backend
# (OS keychain) lands behind the `SecretStore` port alongside it.
secrecy = "0.10"
# Async runtime. Only `rt-multi-thread` + `macros` (for `#[tokio::main]`) now;
# `sync` (channels for the Effect loop) lands with the runtime phase.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Async methods on the `Driver` port (dyn-ready for the Phase 1 ConnPool).
async-trait = "0.1"
# DB drivers behind the same `Driver` port: SQLite (bundled libsqlite3 — no
# system dep) shipped in Phase 0; Postgres lands in Phase 1 (#10). `tls-rustls`
# gives the PG driver a TLS backend so `sslmode` from the DSN is honoured (no
# OpenSSL system dep). `uuid` / `json` / `time` widen the typed decode so the
# PG read path maps those into the existing `Value` variants; the long tail
# (numeric, arrays, enums) hits a conservative non-data marker (#76).
# `default-features = false` skips the unused macros / migrate features.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "postgres",
  "uuid",
  "json",
  "time",
] }
# The single SQL-understanding layer (ARCHITECTURE §stack). Used here to keep
# the read path read-only: parse the input and require exactly one
# `SELECT`-style statement before it reaches the database.
# `default-features = false` drops the `recursive-protection` feature (the
# `recursive → stacker → psm → ar_archive_writer` chain). Trade-off:
# deeply-nested SQL is not guarded against parser stack overflow — acceptable
# for local, user-supplied input. Its 1.88 floor now fits our MSRV, so
# re-enabling it is a possible follow-up; kept off here to hold the tree lean.
sqlparser = { version = "0.62", default-features = false, features = ["std"] }
# Terminal UI: the result table, vim navigation, and (later) the diff view all
# render through ratatui (crossterm is its default backend). ratatui 0.30 sets
# the crate's 1.88 MSRV (see `rust-version` above).
ratatui = "0.30"

[features]
# Opt-in gate for integration tests that need a real database *server*
# (Postgres now; MySQL with #11). Off by default so `cargo test` runs the
# in-memory SQLite suite with no Docker. Enable with `cargo test --features
# it-db` against a containerised server — the DSN comes from `VELLUM_IT_PG_DSN`
# (default `postgres://postgres:postgres@localhost:5432/postgres`). See
# `.bdd-test/` and the `it-db` CI job.
it-db = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
# Driver tests seed a throwaway on-disk SQLite db (the read-only driver can't
# open `:memory:`), cleaned up on drop.
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
